--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
         <!--Navbar-->
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper  deep-orange accent-2">
                 <a href="{{ url_for('index') }}"><img class="brand-logo" src="{{ url_for('static', filename = 'images/logo/logo.png') }}"></a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
@@ -55,65 +55,10 @@
     </main>
 
 
-
-
-    <!--<footer class="page-footer">-->
-
-    <!--    <div class="container">-->
-    <!--        <div class="row valign-wrapper">-->
-
-    <!--            <div class="col s12 l6 valign-wrapper center-align">-->
-    <!--                <img class="brand-logo" src="{{ url_for('static', filename = 'images/logo/logo.png') }}">-->
-    <!--                <p>Cookit-Mons &#174; 2019</p>-->
-    <!--            </div>-->
-
-    <!--            <div class="col s12 l6">-->
-    <!--                <div class="sm-icon center-align" id="social-media">-->
-    <!--                    <a class="facebook1" href="https://www.facebook.com/" target="_blank" title="Facebook" rel="nofollow">-->
-    <!--                        <div class="facebook1"></div>-->
-    <!--                    </a>-->
-    <!--                    <a class="twitter1" href="https://twitter.com/" target="_blank" title="Twitter" rel="nofollow">-->
-    <!--                        <div class="twitter1"></div>-->
-    <!--                    </a>-->
-    <!--                    <a class="linkdin1" href="https://www.linkedin.com/in/" target="_blank" title="Linkedin" rel="nofollow">-->
-    <!--                        <div class="linkdin1"></div>-->
-    <!--                    </a>-->
-    <!--                </div>-->
-    <!--            </div>-->
-
-    <!--        </div>-->
-    <!--    </div>-->
-
-    <!--</footer>-->
-
-
-    <footer class="page-footer">
-
-
-        <div class="container">
-            <div class="row ">
-                <div class="col s12">
-                    <div class="sm-icon center-align" id="social-media">
-                        <a class="facebook1" href="https://www.facebook.com/" target="_blank" title="Facebook" rel="nofollow">
-                            <div class="facebook1"></div>
-                        </a>
-                        <a class="twitter1" href="https://twitter.com/" target="_blank" title="Twitter" rel="nofollow">
-                            <div class="twitter1"></div>
-                        </a>
-                        <a class="linkdin1" href="https://www.linkedin.com/in/" target="_blank" title="Linkedin" rel="nofollow">
-                            <div class="linkdin1"></div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
+    <footer class="deep-orange accent-2 white-text">
         <div class="footer-copyright">
             <div class="container valign-wrapper">
                 <div class="row center-align valign-wrapper">
-
                 <img class="brand-logo" src="{{ url_for('static', filename = 'images/logo/logo.png') }}"> Cookit-Mons &#174; 2019
                 </div>
             </div>
