--- a/templates/recipe-detail.html
+++ b/templates/recipe-detail.html
@@ -1,46 +1,48 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 
 <!--Page Title-->
-{% block title %}{{ recipe_detail['name'].capitalize() }}{% endblock %} 
+{% block title %}{{ recipe_detail['name'].capitalize() }}{% endblock %}
 
 <!--Breadcrumb Navigation-->
 {% block header %}
 
-  <nav>
-    <div class="nav-wrapper">
-      <div class="col s12">
-        <a href="{{ url_for('index') }}" class="breadcrumb">Home</a>
-        <a href="{{ url_for('recipe_list') }}" class="breadcrumb">List of Recipes</a>
-        <a href="#!" class="breadcrumb">{{ recipe_detail['name'].capitalize() }}</a>
-      </div>
+<!--Breadcrumb for viewports for mobile devices-->
+<nav class="hide-on-med-and-up">
+    <div class="nav-wrapper black">
+        <div class="col s12">
+            <a href="{{ url_for('recipe_list') }}" class="breadcrumb">Back</a>
+        </div>
     </div>
-  </nav>
-  
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <ul class=flashes>
-      {% for message in messages %}
-        <li>{{ message }}</li>
-      {% endfor %}
-      </ul>
-    {% endif %}
-  {% endwith %}
+</nav>
 
-{% endblock %}
+<!--Breadcrumb for viewports of tablets and above-->
+<nav class="hide-on-med-and-down show-on-medium-and-up">
+    <div class="nav-wrapper black">
+        <div class="col s12">
+            <a href="{{ url_for('index') }}" class="breadcrumb">Home</a>
+            <a href="{{ url_for('recipe_list') }}" class="breadcrumb">List of Recipes</a>
+            <a href="#!" class="breadcrumb">{{ recipe_detail['name'].capitalize() }}</a>
+        </div>
+    </div>
+</nav>
 
-
-{% block content %}
+{% with messages = get_flashed_messages() %} {% if messages %}
+<ul class="flashes yellow accent-1">
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %} {% endwith %} {% endblock %} {% block content %}
 
 <!--Recipe image-->
-<div class="recipe-image">
-    <h1>Insert image here</h1>
+<div class="recipe-image center-align">
+    <h1>{{ recipe_detail['name'].capitalize() }}</h1>
 </div>
+<hr />
 
 <!--Recipe dashboard-->
 <div class="row">
-    <div class="col s12 m4 center-align">
-        <p><i class="material-icons">assignment</i> <br /> Recipe Name : <br /> {{ recipe_detail['name'].capitalize() }}</p>
-    </div>
+
     <div class="col s12 m4 center-align">
         <p><i class="material-icons center-align">local_dining</i> <br /> Nutrition (est) : <br /> {{ recipe_detail['nutrition_facts'] }} calories</p>
     </div>
@@ -51,12 +53,13 @@
         <p><i class="material-icons center-align">cake</i> <br /> Type of recipe : <br /> {{ recipe_detail['type'].capitalize() }} </p>
     </div>
 </div>
+<hr />
 
 <div class="row center-align">
 
     <div class="col s12 l6">
         <h5>Ingredients</h5>
-    
+
         <ol>
             {% for ingredient in show_ingredients %}
 
@@ -69,7 +72,7 @@
     <div class="col s12 l6">
         <h5>Preparation Steps</h5>
 
-        <ol>
+        <ol class="left-align">
             {% for prep_steps in show_prep_steps %}
 
             <li>{{ prep_steps.capitalize() }}</li>
@@ -82,25 +85,16 @@
 
 <!--Div wrapper for update and delete buttons-->
 <div class="row">
+
+    <!--Update button-->
+    <div class="col s12 l6 center-align button-height">
+        <a href="{{ url_for( 'update_recipe', recipe_id=recipe_detail['_id'] ) }}" class="waves-effect waves-light btn"><i class="material-icons right">edit</i>Update Recipe</a>
+    </div>
     
-<!--Update button-->
-        <div class="col l6 center-align" id="update-button">
-            
-        <button class="btn waves-effect waves-light" type="submit" name="action">
-            <a href="{{ url_for( 'update_recipe', recipe_id=recipe_detail['_id'] ) }}">Update Recipe</a>
-    <i class="material-icons right">edit</i>
-  </button>
-  </div>
-  
-  
-  <!--Delete button-->
-  <div class="col l6 center-align" id="delete-button">
-            
-        <button class="btn waves-effect waves-light" type="submit" name="action">
-            <a href="{{ url_for( 'confirm_delete_recipe', recipe_id=recipe_detail['_id'] ) }}">Delete Recipe</a>
-    <i class="material-icons right">edit</i>
-  </button>
-  </div>
+    <!--Delete button-->
+    <div class="col s12 l6 center-align button-height">
+        <a href="{{ url_for( 'confirm_delete_recipe', recipe_id=recipe_detail['_id'] ) }}" class="waves-effect waves-light btn"><i class="material-icons right">delete</i>Delete Recipe</a>
+    </div>
 
 </div>
 
