--- a/templates/update-recipe.html
+++ b/templates/update-recipe.html
@@ -6,8 +6,18 @@
 <!--Breadcrumb Navigation-->
 {% block header %}
 
-<nav>
-    <div class="nav-wrapper">
+<!--Breadcrumb for viewports for mobile devices-->
+<nav class="hide-on-med-and-up">
+    <div class="nav-wrapper black">
+        <div class="col s12">
+            <a href="{{ url_for('recipe_details', recipe_id=recipe_detail["_id"]) }}" class="breadcrumb">Back</a>
+        </div>
+    </div>
+</nav>
+
+<!--Breadcrumb for viewports of tablets and above-->
+<nav class="hide-on-med-and-down show-on-medium-and-up">
+    <div class="nav-wrapper black">
         <div class="col s12">
             <a href="{{ url_for('index') }}" class="breadcrumb">Home</a>
             <a href="{{ url_for('recipe_list') }}" class="breadcrumb">List of Recipes</a>
@@ -66,8 +76,8 @@
                     {% endfor %}
                 </div>
                 <div class="row center-align">
-                    <div class="col s12 l6"><a class="btn-floating btn-small waves-effect waves-light red" id="add-ingredient"><i class="material-icons">add</i></a> Add an ingredient</div>
-                    <div class="col s12 l6"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-ingredient"><i class="material-icons">clear</i></a> Remove an ingredient</div>
+                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-ingredient"><i class="material-icons">add</i></a> Add an ingredient</div>
+                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-ingredient"><i class="material-icons">clear</i></a> Remove an ingredient</div>
                 </div>
             </div>
 
@@ -82,8 +92,8 @@
                     {% endfor %}
                 </div>
                 <div class="row center-align">
-                    <div class="col s12 l6"><a class="btn-floating btn-small waves-effect waves-light red" id="add-prep"><i class="material-icons">add</i></a> Add a step</div>
-                    <div class="col s12 l6"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-prep"><i class="material-icons">clear</i></a> Remove a step</div>
+                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-prep"><i class="material-icons">add</i></a> Add a step</div>
+                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-prep"><i class="material-icons">clear</i></a> Remove a step</div>
                 </div>
             </div>
 
@@ -91,7 +101,7 @@
 
         <!--Submit Button-->
         <div class="col s12 center-align">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Update
+        <button class="btn waves-effect waves-light button-height" type="submit" name="action">Update
     <i class="material-icons right">send</i>
   </button>
   </div>
