--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 
     <header>
 
-        <!--Navbar-->
+        <!--Navbar for tablets and above-->
         <nav>
             <div class="nav-wrapper  deep-orange accent-2">
                 <a href="{{ url_for('index') }}"><img class="brand-logo" src="{{ url_for('static', filename = 'images/logo/logo.png') }}"></a>
@@ -37,7 +37,8 @@
                 </ul>
             </div>
         </nav>
-
+        
+        <!--Navbar for mobile devices-->
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('submit_recipe') }}">Submit a recipe</a></li>
             <li><a href="{{ url_for('recipe_list') }}">Search our recipes</a></li>
@@ -49,12 +50,11 @@
 
     <main>
 
-
         {% block content %}{% endblock %}
 
     </main>
 
-
+    <!--Footer with logo and website name-->
     <footer class="deep-orange accent-2 white-text">
         <div class="footer-copyright">
             <div class="container valign-wrapper">
@@ -66,13 +66,11 @@
     </footer>
 
 
-
     <!--JQuery-->
     <script type="text/javascript" src="{{ url_for('static', filename = 'js/jquery-3.4.1.js') }}"></script>
 
     <!--Materialize JavaScript at end of body for optimized loading-->
     <script src="{{ url_for('static', filename = 'js/materialize.min.js') }}"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>-->
 
     <!--Website Javascript-->
     <script type="text/javascript" src="{{ url_for('static', filename = 'js/script.js') }}"></script>
