--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
+<!--Extending the base.html template-->
 {% extends "base.html" %}
+
 
 <!--Page title-->
 {% block title %}Cookit-Mons{% endblock %}
@@ -8,137 +10,61 @@
 {% block content %}
 
 <!--Submit Recipe Display-->
-<div class="col s12 m7">
-    <div class="card horizontal card-panel hoverable">
-        <div class="card-image hide-on-med-and-down">
-            <img src="{{ url_for('static', filename = 'images/homepage/submit-recipe.jpg') }}" alt="Cookit-Mons, the online cookbook">
-        </div>
-        <div class="card-stacked">
-            <div class="card-content">
-                <div class="center-align">
-                    <img src="{{ url_for('static', filename = 'images/logo/logo.png') }}">
+<section>
+    <div class="col s12">
+        <div class="card horizontal card-panel hoverable">
+            <div class="card-image hide-on-med-and-down">
+                <img src="{{ url_for('static', filename = 'images/homepage/submit-recipe.jpg') }}" alt="Cookit-Mons, the online cookbook">
+            </div>
+            <div class="card-stacked">
+                <div class="card-content">
+                    <div class="center-align">
+                        <img src="{{ url_for('static', filename = 'images/logo/logo.png') }}">
+                    </div>
+                    <h4>About Cookit-Mons</h4>
+                    <p>Cookit-Mons was created by an aspiring full-stack developer in his dream to cook and eat something besides instant ramen for the rest of his life.</p>
+                    <br />
+                    <p>With the aid of chefs and home cooks everywhere, we seek your help to combat our mutual nemesis, instant ramen.</p>
                 </div>
-                <h4>About Cookit-Mons</h4>
-                <p>Cookit-Mons was created as a project by an aspiring full-stack developer in his dream to eat something besides instant ramen for the rest of his life.</p>
-                <br />
-                <p>With the aid of chefs and home cooks everywhere, we seek your help to combat our mutual nemesis, instant ramen.</p>
-            </div>
-            <div class="card-action">
-                <a href="{{ url_for('submit_recipe') }}">Submit a recipe!</a>
+                <div class="card-action">
+                    <a href="{{ url_for('submit_recipe') }}">Submit a recipe!</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 
 
-<!--Knives carousel-->
-<div class="container">
-    <div class="center-align section">
-        <img class="responsive-img" src="{{ url_for('static', filename = 'images/knives/mac-knives-logo.jpg') }}">
-    </div>
-    <div class="carousel">
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-4-paring-knife-pk-40" target="_blank">
+<!--Carousel for MAC knives-->
+<section>
+    <div class="container">
+        <!--Logo for MAC knives-->
+        <div class="center-align section">
+            <img class="responsive-img" src="{{ url_for('static', filename = 'images/knives/mac-knives-logo.jpg') }}">
+        </div>
+        <!--Carousel containing the different MAC knives-->
+        <div class="carousel">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-4-paring-knife-pk-40" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-paring-knife.jpg') }}">ORIGINAL SERIES 4" PARING KNIFE (PK-40)
         </a>
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-cleaver-cl-6" target="_blank">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-cleaver-cl-6" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-cleaver-knife.jpg') }}">ORIGINAL SERIES 6 1/2" CLEAVER (CL-6)
         </a>
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-utility-knife" target="_blank">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-utility-knife" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-utility-knife.jpg') }}">ORIGINAL SERIES 6 1/2" UTILITY KNIFE (UK-60)
         </a>
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-3-4-fillet-knife" target="_blank">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-3-4-fillet-knife" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-fillet-knife.jpg') }}">ORIGINAL SERIES 6 3/4" FILLET KNIFE (FK-70)
         </a>
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/ck-90" target="_blank">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/ck-90" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-carving-knife.jpg') }}">ORIGINAL SERIES 9" CARVING KNIFE (CK-90)
         </a>
-    </div>
-    <div class="section">
-        Entirely manufactured in Japan, MAC knives are precision tools, shaped, assembled, polished, and sharpened by professional Japanese craftsmen. Each knife is equipped with a razor-sharp edge, comfortable handles, and great balance. Popular with professional
-        cooks and cooking enthusiasts throughout the world, and over 25 million knives sold since 1964.
-    </div>
-</div>
-
-<!--Horizontal rule to separate the carousel from the recipe cards-->
-<hr />
-
-<!--Recipe Card Categories-->
-<div class="row">
-
-    <!--Card for meat category-->
-    <div class="col xl4 card card-panel hoverable">
-        <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{{ url_for('static', filename = 'images/category/meat.jpg') }}" alt="Meat Recipes">
         </div>
-        <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Meat Recipes<i class="material-icons right">more_vert</i></span>
-        </div>
-        <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Meat Recipes<hr /><i class="material-icons right">close</i></span>
-
-            <ol>
-                {% for meat in type_meat %}
-
-                <li><a href="{{ url_for('recipe_details', recipe_id=meat['_id']) }}">{{ meat["name"].capitalize() }}</a></li>
-
-                {% endfor %}
-            </ol>
-
+        <div class="section">
+            Entirely manufactured in Japan, MAC knives are precision tools, shaped, assembled, polished, and sharpened by professional Japanese craftsmen. Each knife is equipped with a razor-sharp edge, comfortable handles, and great balance. Popular with professional
+            cooks and cooking enthusiasts throughout the world, and over 25 million knives sold since 1964.
         </div>
     </div>
-
-    <!--Card for vegetable category-->
-    <div class="col xl4 card card-panel hoverable">
-        <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{{ url_for('static', filename = 'images/category/vegetable.jpg') }}" alt="vegetable recipes">
-        </div>
-        <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">more_vert</i></span>
-        </div>
-        <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Vegetable Recipes<hr /><i class="material-icons right">close</i></span>
-
-            <ol>
-
-                {% for vegetable in type_vegetable %}
-
-                <li><a href="{{ url_for('recipe_details', recipe_id=vegetable['_id']) }}">{{ vegetable["name"].capitalize() }}</a></li>
-
-                {% endfor %}
-
-            </ol>
-
-        </div>
-    </div>
-
-    <!--Card for dessert category-->
-    <div class="col xl4 card card-panel hoverable">
-        <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{{ url_for('static', filename = 'images/category/dessert.jpg') }}" alt="dessert recipes">
-        </div>
-        <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Dessert Recipes<i class="material-icons right">more_vert</i></span>
-        </div>
-        <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Dessert Recipes<hr /><i class="material-icons right">close</i></span>
-
-            <ol>
-
-                {% for dessert in type_dessert %}
-
-                <li><a href="{{ url_for('recipe_details', recipe_id=dessert['_id']) }}">{{ dessert["name"].capitalize() }}</a></li>
-
-                {% endfor %}
-
-            </ol>
-
-        </div>
-    </div>
-</div>
-
-
-
-
-
+</section>
 
 {% endblock %}
