--- a/templates/recipes-list.html
+++ b/templates/recipes-list.html
@@ -1,4 +1,6 @@
+<!--Extending the base.html template-->
 {% extends "base.html" %}
+
 
 <!--Page title-->
 {% block title %}List of recipes{% endblock %}
@@ -17,24 +19,25 @@
 </nav>
 
 <!--Breadcrumb for viewports of tablets and above-->
-  <nav class="hide-on-med-and-down show-on-medium-and-up">
+<nav class="hide-on-med-and-down show-on-medium-and-up">
     <div class="nav-wrapper black">
-      <div class="col s12">
-        <a href="{{ url_for('index') }}" class="breadcrumb">Home</a>
-        <a href="{{ url_for('recipe_list') }}" class="breadcrumb">List of Recipes</a>
-      </div>
+        <div class="col s12">
+            <a href="{{ url_for('index') }}" class="breadcrumb">Home</a>
+            <a href="{{ url_for('recipe_list') }}" class="breadcrumb">List of Recipes</a>
+        </div>
     </div>
-  </nav>
-  
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <ul class="flashes yellow accent-1">
-      {% for message in messages %}
+</nav>
+
+<!--Flash messages for create and delete-->
+<section>
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <ul class="flashes yellow accent-1">
+        {% for message in messages %}
         <li>{{ message }}</li>
-      {% endfor %}
-      </ul>
-    {% endif %}
-  {% endwith %}
+        {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
+</section>
 
 {% endblock %}
 
@@ -42,108 +45,99 @@
 <!--Page content-->
 {% block content %}
 
+<section>
+    <!--Recipe Card Categories-->
+    <div class="row">
 
-<!--Recipe Card Categories-->
-<div class="row">
-
-    <!--Card for meat category-->
-    <div class="col xl4 card card-panel hoverable">
-        <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{{ url_for('static', filename = 'images/category/meat.jpg') }}" alt="Meat Recipes">
+        <!--Card for meat category-->
+        <div class="col xl4 card card-panel hoverable">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="{{ url_for('static', filename = 'images/category/meat.jpg') }}" alt="Meat Recipes">
+            </div>
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Meat Recipes<i class="material-icons right">more_vert</i></span>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Meat Recipes<hr /><i class="material-icons right">close</i></span>
+                <!--Listing of meat recipes-->
+                <ol>
+                    {% for meat in type_meat %}
+                    <li><a href="{{ url_for('recipe_details', recipe_id=meat['_id']) }}">{{ meat["name"].capitalize() }}</a></li>
+                    {% endfor %}
+                </ol>
+            </div>
         </div>
-        <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Meat Recipes<i class="material-icons right">more_vert</i></span>
+
+        <!--Card for vegetable category-->
+        <div class="col xl4 card card-panel hoverable">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="{{ url_for('static', filename = 'images/category/vegetable.jpg') }}" alt="vegetable recipes">
+            </div>
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">more_vert</i></span>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Vegetable Recipes<hr /><i class="material-icons right">close</i></span>
+                <!--Listing of vegetable recipes-->
+                <ol>
+                    {% for vegetable in type_vegetable %}
+                    <li><a href="{{ url_for('recipe_details', recipe_id=vegetable['_id']) }}">{{ vegetable["name"].capitalize() }}</a></li>
+                    {% endfor %}
+                </ol>
+            </div>
         </div>
-        <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Meat Recipes<hr /><i class="material-icons right">close</i></span>
 
-            <ol>
-                {% for meat in type_meat %}
-
-                <li><a href="{{ url_for('recipe_details', recipe_id=meat['_id']) }}">{{ meat["name"].capitalize() }}</a></li>
-
-                {% endfor %}
-            </ol>
-
-        </div>
-    </div>
-
-    <!--Card for vegetable category-->
-    <div class="col xl4 card card-panel hoverable">
-        <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{{ url_for('static', filename = 'images/category/vegetable.jpg') }}" alt="vegetable recipes">
-        </div>
-        <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Vegetable Recipes<i class="material-icons right">more_vert</i></span>
-        </div>
-        <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Vegetable Recipes<hr /><i class="material-icons right">close</i></span>
-
-            <ol>
-
-                {% for vegetable in type_vegetable %}
-
-                <li><a href="{{ url_for('recipe_details', recipe_id=vegetable['_id']) }}">{{ vegetable["name"].capitalize() }}</a></li>
-
-                {% endfor %}
-
-            </ol>
-
-        </div>
-    </div>
-
-    <!--Card for dessert category-->
-    <div class="col xl4 card card-panel hoverable">
-        <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{{ url_for('static', filename = 'images/category/dessert.jpg') }}" alt="dessert recipes">
-        </div>
-        <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Dessert Recipes<i class="material-icons right">more_vert</i></span>
-        </div>
-        <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Dessert Recipes<hr /><i class="material-icons right">close</i></span>
-
-            <ol>
-
-                {% for dessert in type_dessert %}
-
-                <li><a href="{{ url_for('recipe_details', recipe_id=dessert['_id']) }}">{{ dessert["name"].capitalize() }}</a></li>
-
-                {% endfor %}
-
-            </ol>
-
+        <!--Card for dessert category-->
+        <div class="col xl4 card card-panel hoverable">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="{{ url_for('static', filename = 'images/category/dessert.jpg') }}" alt="dessert recipes">
+            </div>
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Dessert Recipes<i class="material-icons right">more_vert</i></span>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Dessert Recipes<hr /><i class="material-icons right">close</i></span>
+                <!--Listing of dessert recipes-->
+                <ol>
+                    {% for dessert in type_dessert %}
+                    <li><a href="{{ url_for('recipe_details', recipe_id=dessert['_id']) }}">{{ dessert["name"].capitalize() }}</a></li>
+                    {% endfor %}
+                </ol>
+            </div>
         </div>
     </div>
-</div>
+</section>
 
-<!--Knives carousel-->
-<div class="container">
-    <div class="center-align section">
-        <img class="responsive-img" src="{{ url_for('static', filename = 'images/knives/mac-knives-logo.jpg') }}">
-    </div>
-    <div class="carousel">
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-4-paring-knife-pk-40" target="_blank">
+<section>
+    <!--Knives carousel-->
+    <div class="container">
+        <!--Logo for MAC knives-->
+        <div class="center-align section">
+            <img class="responsive-img" src="{{ url_for('static', filename = 'images/knives/mac-knives-logo.jpg') }}">
+        </div>
+        <!--Carousel containing the different MAC knives-->
+        <div class="carousel">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-4-paring-knife-pk-40" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-paring-knife.jpg') }}">ORIGINAL SERIES 4" PARING KNIFE (PK-40)
         </a>
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-cleaver-cl-6" target="_blank">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-cleaver-cl-6" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-cleaver-knife.jpg') }}">ORIGINAL SERIES 6 1/2" CLEAVER (CL-6)
         </a>
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-utility-knife" target="_blank">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-1-2-utility-knife" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-utility-knife.jpg') }}">ORIGINAL SERIES 6 1/2" UTILITY KNIFE (UK-60)
         </a>
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-3-4-fillet-knife" target="_blank">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/original-series-6-3-4-fillet-knife" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-fillet-knife.jpg') }}">ORIGINAL SERIES 6 3/4" FILLET KNIFE (FK-70)
         </a>
-        <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/ck-90" target="_blank">
+            <a class="carousel-item white center-align" href="https://www.macknife.com/collections/original-series/products/ck-90" target="_blank">
             <img src="{{ url_for('static', filename = 'images/knives/mac-carving-knife.jpg') }}">ORIGINAL SERIES 9" CARVING KNIFE (CK-90)
         </a>
+        </div>
+        <div class="section">
+            Entirely manufactured in Japan, MAC knives are precision tools, shaped, assembled, polished, and sharpened by professional Japanese craftsmen. Each knife is equipped with a razor-sharp edge, comfortable handles, and great balance. Popular with professional
+            cooks and cooking enthusiasts throughout the world, and over 25 million knives sold since 1964.
+        </div>
     </div>
-    <div class="section">
-        Entirely manufactured in Japan, MAC knives are precision tools, shaped, assembled, polished, and sharpened by professional Japanese craftsmen. Each knife is equipped with a razor-sharp edge, comfortable handles, and great balance. Popular with professional
-        cooks and cooking enthusiasts throughout the world, and over 25 million knives sold since 1964.
-    </div>
-</div>
-
+</section>
 
 {% endblock %}
