--- a/templates/submit-recipe.html
+++ b/templates/submit-recipe.html
@@ -1,3 +1,4 @@
+<!--Extending the base.html template-->
 {% extends "base.html" %}
 
 <!--Page Title-->
@@ -25,79 +26,79 @@
     </div>
 </nav>
 
-{% endblock %} 
+{% endblock %}
 
 
-<!--Form content to submit a recipe-->
+<!--Page content-->
 {% block content %}
 
-<div class="row">
-    <form class="col s12" method="POST">
-        <!--Text inputs-->
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">assignment</i>
-                <input id="icon_prefix" type="text" name="recipe-name" class="validate" required>
-                <label for="icon_prefix">Recipe Name</label>
-            </div>
-            <div class="input-field col s12 l4">
-                <i class="material-icons prefix">local_dining</i>
-                <input id="icon_telephone" type="number" class="validate" name="nutrition-facts" required>
-                <label for="icon_telephone">Nutrition Facts (Calories)</label>
-            </div>
-            <div class="input-field col s12 l4">
-                <i class="material-icons prefix">access_time</i>
-                <input id="icon_telephone" type="number" name="cooking-time" class="validate" required>
-                <label for="icon_telephone">Cooking Time (Mins)</label>
-            </div>
-            <!--Radio Button for type of recipe-->
-            <div class="input-field col s12 l4">
-                <i class="material-icons prefix">cake</i>
-                <select name="type">
+<!--Form to submit a recipe-->
+<section>
+    <div class="row">
+        <form class="col s12" method="POST">
+            <!--Text inputs for recipe name, nutrition facts and cooking time-->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">assignment</i>
+                    <input id="icon_prefix" type="text" name="recipe-name" class="validate" required>
+                    <label for="icon_prefix">Recipe Name</label>
+                </div>
+                <div class="input-field col s12 l4">
+                    <i class="material-icons prefix">local_dining</i>
+                    <input id="icon_telephone" type="number" class="validate" name="nutrition-facts" required>
+                    <label for="icon_telephone">Nutrition Facts (Calories)</label>
+                </div>
+                <div class="input-field col s12 l4">
+                    <i class="material-icons prefix">access_time</i>
+                    <input id="icon_telephone" type="number" name="cooking-time" class="validate" required>
+                    <label for="icon_telephone">Cooking Time (Mins)</label>
+                </div>
+                <!--Radio Button for type of recipe-->
+                <div class="input-field col s12 l4">
+                    <i class="material-icons prefix">cake</i>
+                    <select name="type">
                   <option value="meat" selected>Meat</option>
                   <option value="vegetable">Vegetable</option>
                   <option value="dessert">Dessert</option>
                 </select>
-                <label>Type of Recipe</label>
-            </div>
-        </div>
-
-
-        <div class="row">
-
-            <div class="col s12 l6">
-                <div id="ingredients-input">
-                    <h5>Ingredients</h5>
-                    <hr />
-                </div>
-                <div class="row center-align">
-                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-ingredient"><i class="material-icons">add</i></a> Add an ingredient</div>
-                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-ingredient"><i class="material-icons">clear</i></a> Remove an ingredient</div>
+                    <label>Type of Recipe</label>
                 </div>
             </div>
-
-            <div class="col s12 l6">
-                <div id="preparations-input">
-                    <h5>Preparation Steps</h5>
-                    <hr />
+            <!--Text inputs for ingredients and preparation steps-->
+            <div class="row">
+                <!--Ingredients input fields-->
+                <div class="col s12 l6">
+                    <div id="ingredients-input">
+                        <h5>Ingredients</h5>
+                        <hr />
+                    </div>
+                    <!--Add and remove butons-->
+                    <div class="row center-align">
+                        <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-ingredient"><i class="material-icons">add</i></a> Add an ingredient</div>
+                        <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-ingredient"><i class="material-icons">clear</i></a> Remove an ingredient</div>
+                    </div>
                 </div>
-                <div class="row center-align">
-                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-prep"><i class="material-icons">add</i></a> Add a step</div>
-                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-prep"><i class="material-icons">clear</i></a> Remove a step</div>
+                <!--Preparation steps input fields-->
+                <div class="col s12 l6">
+                    <div id="preparations-input">
+                        <h5>Preparation Steps</h5>
+                        <hr />
+                    </div>
+                    <!--Add and remove butons-->
+                    <div class="row center-align">
+                        <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-prep"><i class="material-icons">add</i></a> Add a step</div>
+                        <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-prep"><i class="material-icons">clear</i></a> Remove a step</div>
+                    </div>
                 </div>
             </div>
-
-        </div>
-
-
-        <!--Submit Button-->
-        <div class="col s12 center-align">
-        <button class="btn waves-effect waves-light button-height" type="submit" name="action">Submit
-    <i class="material-icons right">send</i>
-  </button>
-  </div>
-
-    </form>
-</div>
+            <!--Submit Button-->
+            <div class="col s12 center-align">
+                <button class="btn waves-effect waves-light button-height" type="submit" name="action">
+                    Submit<i class="material-icons right">send</i>
+                </button>
+            </div>
+        </form>
+    </div>
+</section>
 
 {% endblock %}
