--- a/templates/update-recipe.html
+++ b/templates/update-recipe.html
@@ -1,3 +1,4 @@
+<!--Extending the base.html template-->
 {% extends "base.html" %}
 
 <!--Page Title-->
@@ -10,7 +11,7 @@
 <nav class="hide-on-med-and-up">
     <div class="nav-wrapper black">
         <div class="col s12">
-            <a href="{{ url_for('recipe_details', recipe_id=recipe_detail["_id"]) }}" class="breadcrumb">Back</a>
+            <a href="{{ url_for('recipe_details', recipe_id=recipe_detail[" _id "]) }}" class="breadcrumb">Back</a>
         </div>
     </div>
 </nav>
@@ -21,92 +22,94 @@
         <div class="col s12">
             <a href="{{ url_for('index') }}" class="breadcrumb">Home</a>
             <a href="{{ url_for('recipe_list') }}" class="breadcrumb">List of Recipes</a>
-            <a href="{{ url_for('recipe_details', recipe_id=recipe_detail["_id"]) }}" class="breadcrumb">{{ recipe_detail['name'].capitalize() }}</a>
+            <a href="{{ url_for('recipe_details', recipe_id=recipe_detail[" _id "]) }}" class="breadcrumb">{{ recipe_detail['name'].capitalize() }}</a>
             <a href="#!" class="breadcrumb">Update recipe</a>
         </div>
     </div>
 </nav>
 
-{% endblock %} 
+{% endblock %}
 
+
+<!--Page content-->
 {% block content %}
 
-<div class="row">
-    <form class="col s12" method="POST">
-        <!--Text inputs-->
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">assignment</i>
-                <input id="icon_prefix" type="text" name="recipe-name" class="validate" value="{{ recipe_detail['name'].capitalize() }}" required>
-                <label for="icon_prefix">Recipe Name</label>
-            </div>
-            <div class="input-field col s12 l4">
-                <i class="material-icons prefix">local_dining</i>
-                <input id="icon_telephone" type="number" class="validate" name="nutrition-facts" value="{{ recipe_detail['nutrition_facts'] }}"required>
-                <label for="icon_telephone">Nutrition Facts (Calories)</label>
-            </div>
-            <div class="input-field col s12 l4">
-                <i class="material-icons prefix">access_time</i>
-                <input id="icon_telephone" type="number" name="cooking-time" class="validate" value="{{ recipe_detail['cooking_time'] }}" required>
-                <label for="icon_telephone">Cooking Time (Mins)</label>
-            </div>
-            <!--Radio Button for type of recipe-->
-            <div class="input-field col s12 l4">
-                <i class="material-icons prefix">cake</i>
-                <select name="type">
+<!--Form to update the recipe-->
+<section>
+    <div class="row">
+        <form class="col s12" method="POST">
+            <!--Text inputs for recipe name, nutrition facts and cooking time with the values added as per recorded-->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">assignment</i>
+                    <input id="icon_prefix" type="text" name="recipe-name" class="validate" value="{{ recipe_detail['name'].capitalize() }}" required>
+                    <label for="icon_prefix">Recipe Name</label>
+                </div>
+                <div class="input-field col s12 l4">
+                    <i class="material-icons prefix">local_dining</i>
+                    <input id="icon_telephone" type="number" class="validate" name="nutrition-facts" value="{{ recipe_detail['nutrition_facts'] }}" required>
+                    <label for="icon_telephone">Nutrition Facts (Calories)</label>
+                </div>
+                <div class="input-field col s12 l4">
+                    <i class="material-icons prefix">access_time</i>
+                    <input id="icon_telephone" type="number" name="cooking-time" class="validate" value="{{ recipe_detail['cooking_time'] }}" required>
+                    <label for="icon_telephone">Cooking Time (Mins)</label>
+                </div>
+                <!--Radio Button for type of recipe with the recorded input selected-->
+                <div class="input-field col s12 l4">
+                    <i class="material-icons prefix">cake</i>
+                    <select name="type">
                   <option value="meat" {{meat_selected}}>Meat</option>
                   <option value="vegetable" {{vegetable_selected}}>Vegetable</option>
                   <option value="dessert" {{dessert_selected}}>Dessert</option>
                 </select>
-                <label>Type of Recipe</label>
-            </div>
-        </div>
-
-
-        <div class="row">
-
-            <div class="col s12 l6">
-                <div id="ingredients-input">
-                    <h5>Ingredients</h5>
-                    <hr />
-                    {% for ingredient_numbering, ingredient in show_ingredients %}
-                    
-                    <div class="input-field col s12"> Ingredient {{ ingredient_numbering }} <input placeholder="Ingredient" value="{{ ingredient.capitalize() }}" name="ingredientInput" type="text" class="validate" required></div>
-        
-                    {% endfor %}
-                </div>
-                <div class="row center-align">
-                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-ingredient"><i class="material-icons">add</i></a> Add an ingredient</div>
-                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-ingredient"><i class="material-icons">clear</i></a> Remove an ingredient</div>
+                    <label>Type of Recipe</label>
                 </div>
             </div>
-
-            <div class="col s12 l6">
-                <div id="preparations-input">
-                    <h5>Preparation Steps</h5>
-                    <hr />
-                    {% for prep_steps_numbering, prep_steps in show_prep_steps %}
-                    
-                    <div class="input-field col s12"> Step {{ prep_steps_numbering }} <input placeholder="Preparation Step" value="{{ prep_steps.capitalize() }}" name="prepInput" type="text" class="validate" required></div>
-        
-                    {% endfor %}
+            <!--Text inputs for ingredients and preparation steps-->
+            <div class="row">
+                <!--Ingredients input fields with the values added as per records-->
+                <div class="col s12 l6">
+                    <div id="ingredients-input">
+                        <h5>Ingredients</h5>
+                        <hr />
+                        <!--To add the values as per the records-->
+                        {% for ingredient_numbering, ingredient in show_ingredients %}
+                        <div class="input-field col s12"> Ingredient {{ ingredient_numbering }} <input placeholder="Ingredient" value="{{ ingredient.capitalize() }}" name="ingredientInput" type="text" class="validate" required></div>
+                        {% endfor %}
+                    </div>
+                    <!--Add and remove butons-->
+                    <div class="row center-align">
+                        <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-ingredient"><i class="material-icons">add</i></a> Add an ingredient</div>
+                        <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-ingredient"><i class="material-icons">clear</i></a> Remove an ingredient</div>
+                    </div>
                 </div>
-                <div class="row center-align">
-                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-prep"><i class="material-icons">add</i></a> Add a step</div>
-                    <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-prep"><i class="material-icons">clear</i></a> Remove a step</div>
+                <!--Preparation steps input fields with the values added as per records-->
+                <div class="col s12 l6">
+                    <div id="preparations-input">
+                        <h5>Preparation Steps</h5>
+                        <hr />
+                        <!--To add the values as per the records-->
+                        {% for prep_steps_numbering, prep_steps in show_prep_steps %}
+                        <div class="input-field col s12"> Step {{ prep_steps_numbering }} <input placeholder="Preparation Step" value="{{ prep_steps.capitalize() }}" name="prepInput" type="text" class="validate" required></div>
+                        {% endfor %}
+                    </div>
+                    <!--Add and remove butons-->
+                    <div class="row center-align">
+                        <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="add-prep"><i class="material-icons">add</i></a> Add a step</div>
+                        <div class="col s12 l6 button-height"><a class="btn-floating btn-small waves-effect waves-light red" id="remove-prep"><i class="material-icons">clear</i></a> Remove a step</div>
+                    </div>
                 </div>
             </div>
+            <!--Submit Button-->
+            <div class="col s12 center-align">
+                <button class="btn waves-effect waves-light button-height" type="submit" name="action">
+                    Update<i class="material-icons right">send</i>
+                </button>
+            </div>
 
-        </div>
-
-        <!--Submit Button-->
-        <div class="col s12 center-align">
-        <button class="btn waves-effect waves-light button-height" type="submit" name="action">Update
-    <i class="material-icons right">send</i>
-  </button>
-  </div>
-
-    </form>
-</div>
+        </form>
+    </div>
+</section>
 
 {% endblock %}
