updated the readme and wireframes before deployment

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                     <div class="center-align">
                         <img src="{{ url_for('static', filename = 'images/logo/logo.png') }}">
                     </div>
-                    <h4>About Cookit-Mons</h4>
+                    <h5 class="center-align">About Cookit-Mons</h5>
                     <p>Cookit-Mons was created by an aspiring full-stack developer in his dream to cook and eat something besides instant ramen for the rest of his life.</p>
                     <br />
                     <p>With the aid of chefs and home cooks everywhere, we seek your help to combat our mutual nemesis, instant ramen.</p>
