add the file upload and image display

--- a/templates/recipe-detail.html
+++ b/templates/recipe-detail.html
@@ -50,6 +50,11 @@
     <div class="recipe-image center-align">
         <h1>{{ recipe_detail['name'].capitalize() }}</h1>
     </div>
+    <div class="recipe-image center-align">
+        
+        <img class="center-align" src="{{ image }}">
+        
+    </div>
     <hr />
     <!--Recipe nutrition, cooking time and type of recipe-->
     <div class="row">
