--- a/templates/update-recipe.html
+++ b/templates/update-recipe.html
@@ -106,7 +106,7 @@
             <div class="file-field input-field col l6">
                 <div class="btn">
                     <span>Upload image</span>
-                    <input type="file">
+                    <input type="file" name="image">
                 </div>
                 <div class="file-path-wrapper">
                     <input class="file-path validate" type="text">
