updated the requirements.txt, templates and images for file uploads

--- a/templates/submit-recipe.html
+++ b/templates/submit-recipe.html
@@ -96,7 +96,7 @@
             <div class="file-field input-field col l6">
                 <div class="btn">
                     <span>Upload image</span>
-                    <input type="file" name="image">
+                    <input id="image-upload" type="file" name="image" accept="image/*" required>
                 </div>
                 <div class="file-path-wrapper">
                     <input class="file-path validate" type="text">
