--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,10 @@ li{
     padding:10px;
 }
 
-.recipe-image{
-    text-align:center;
-    height:200px;
+/*Styling for recipe image in recipe-details and update-recipes*/
+.img-height{
+    margin-top:20px;
+    max-height:250px;
+    max-width:250px;
+    border:1px solid black;
 }
