--- a/templates/recipe-detail.html
+++ b/templates/recipe-detail.html
@@ -46,15 +46,22 @@
 
 <!--Recipe details dashboard-->
 <section>
+    {% if recipe_detail["image_url"] is defined %}
+    <!--Image for recipe-->
+    <div class="container">
+        <div class="row center-align">
+            <div>
+            <img class="img-height" src="{{ recipe_detail["image_url"] }}">
+            </div>
+        </div>
+    </div>
+    {% endif %}
+    
     <!--Recipe Name-->
     <div class="recipe-image center-align">
         <h1>{{ recipe_detail['name'].capitalize() }}</h1>
     </div>
-    <div class="recipe-image center-align">
-        
-        <img class="center-align" src="{{ image }}">
-        
-    </div>
+
     <hr />
     <!--Recipe nutrition, cooking time and type of recipe-->
     <div class="row">
